<resources>
    <string name="app_name">Fate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="narration_here">Narration here</string>
    <string name="continue_button_txt">Continue</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="start">START</string>
    <string name="play">PLAY MUSIC</string>
    <string name="stop">STOP MUSIC</string>
    <string name="app_name_capitalized">FATE</string>
    <string name="sign_post_desc">A sign post with two signs pointing in opposite directions</string>
    <string name="instructions_text">Hello fellow traveler,\nWelcome to Fate, an interactive app that allows you to take control of your own journey. Choose a story to get started. As you move along the story you will be presented with choices: choose wisely. If it is too hard to make a choice, flip a coin (shown below) to make a decision! Immerse yourself into a world of wonder.\n\n\nGood luck and take care, The Creator</string>
    <string name="example_desc">Synopsis: You meet the love of your life one way or other</string>
    <string name="example_genre">Genre: Romance</string>
    <string name="example_title">An Unexpected Encounter</string>
    <string name="example_img">Two people in a heart</string>
    <string name="example_completion">Completion: 0%</string>
    <string name="story_title">%1$s</string>
    <string name="story_genre">Genre: %1$s</string>
    <string name="story_desc">Synopsis: %1$s</string>
    <string name="story_completion">Completion: %1$s%%</string>
    <string name="return_home_txt">Return to home</string>
    <string name="reminders_notification_channel_id">alarms_id</string>
    <string name="reminders_notification_channel_name">alarms_name</string>
    <string name="title_notification_reminder">Finish where you left off!</string>
    <string name="description_notification_reminder">Chad is waiting ;)</string>
    <string name="back_to_stories">Back to Stories</string>
    <string name="flip_a_coin">Flip a coin</string>
    <string name="swipe_txt">Swipe up to flip the coin and \n decide your fate!</string>
    <string name="gold_coin_desc">gold coin</string>
    <string name="top_txt">TOP</string>
    <string name="back_to_story">Back to Previous Screen</string>
    <string name="credits">CREDITS</string>
</resources>